# nuxt-3-bazel-example

./: .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  nuxt.config.ts  package.json
pages/: about.vue  index.vue
